Adding the other anarchies to DNI strategy
Also fixed an error with the Tennessee focus tree

--- a/localisation/english/anarchy_l_english.yml
+++ b/localisation/english/anarchy_l_english.yml
@@ -22,3 +22,9 @@ anarchy_no_manpower:0 "Lawless"
  ZBC: "British Columbia Anarchy"
  ZBC_DEF: "the British Columbia Anarchy"
  ZBC_ADJ: "British Columbia Anarchy"
+ ZCR:0 "Caribbean Anarchy"
+ ZCR_DEF:0 "the Caribbean Anarchy"
+ ZCR_ADJ:0 "Caribbean Anarchy"
+ ZBA:0 "Bahaman Anarchy"
+ ZBA_DEF:0 "the Bahaman Anarchy"
+ ZBA_ADJ:0 "Bahaman Anarchy"
