--- a/localisation/english/DEN_USA/XTN_l_english.yml
+++ b/localisation/english/DEN_USA/XTN_l_english.yml
@@ -1213,3 +1213,11 @@ XTN_german_tech_support_desc:0 "Our millitary is lacking in tanks. We shall ask 
 
 
 XTN_book_descr:0 "The nation of Tennessee is isolated pacifist state, but this is going to change. The Infighting in Intelligentsia camp, the calls for agrarian union and the rise of Ku Klux Klan will definietly influence politics of this nation for next decades. Intelligentsia calls for communist or even anarchist society and re-unification of United States. Agrarians call for steady course with isolationism and farmlands at their focus, and KKK? Ku Klux Klan calls for all american revolution that will enslave everybody who they disagree with. They also aim to avange loss of confederacy in civil war. No matter who will come on top, the next 30 years look interesting."
+
+XTN_protestant_primacy:0 "Crush Catholics"
+XTN_protestant_primacy_desc:0 "American nation has been founded on protestant faith and we shall fight all the catholics trying to de-americanize us."
+
+XTN_protestant_state:0 "Protestant State"
+XTN_protestant_state_desc:0 "We are strongly connected to protestant religon and we shall eliminate all opposing religions."
+
+XTN_militias_trait:0 "Miltias"
