Small focus update

--- a/localisation/english/DEN_USA/XTN_l_english.yml
+++ b/localisation/english/DEN_USA/XTN_l_english.yml
@@ -1221,3 +1221,6 @@ XTN_protestant_state:0 "Protestant State"
 XTN_protestant_state_desc:0 "We are strongly connected to protestant religon and we shall eliminate all opposing religions."
 
 XTN_militias_trait:0 "Miltias"
+
+XTN_conquer_caribbean:0 "Conquer Caribbean"
+XTN_conquer_caribbean_desc:0 "Our brave knights request our intervention in caribbean islands."
