cant be bothered anympre

--- a/localisation/english/DEN_USA/XWY_l_english.yml
+++ b/localisation/english/DEN_USA/XWY_l_english.yml
@@ -70,3 +70,6 @@
  XWY_royal_tt:0 "Needs more than five on all Mana"
  XWY_the_red_army:0 "The Red Army"
  XWY_refounded_army_idea:0 "A New Army"
+ XWY_unified_central_command:0 "Unified Central Command"
+ XWY_prepare_integration:0 "Prepare Integration"
+ XWY_rocky_confrence:0 "Rocky Constition"
