maryland is basically done now

--- a/localisation/english/DEN_USA/XMD_l_english.yml
+++ b/localisation/english/DEN_USA/XMD_l_english.yml
@@ -22,8 +22,6 @@
 
  #Event
 
- XMD_political_events.18.t: "Reports of Clashes in the Street"
-
  XMD_the_south_will_join_the_conservatives_in_the_civil_war_tt: "§YThe South and the North will flip allegience in a potential civil war.§!"
  XMD_will_pass: "§GIt will certainly pass.§!"
  XMD_likely_to_pass: "§7It is likely to pass.§!"
@@ -83,7 +81,23 @@
  XMD_our_claim_on_america: "Raise The Star Spangled Banner"
 
  XMD_end_the_experiment: "End The American Experiment"
- 
+
+ XMD_bolster_our_forces: "Bolster Our Forces"
+ XMD_reform_the_army: "Reform The Army"
+ XMD_first_special_service_force: "First Special Service Force"
+ XMD_death_from_above: "Death From Above"
+ XMD_ensuring_discipline: "Ensuring Discipline"
+ XMD_shock_and_awe: "Shock And Awe"
+ XMD_unleash_hellfire: "Unleash Hellfire"
+ XMD_rely_on_militias: "Rely On Militias"
+ XMD_the_peoples_war: "The People's War"
+ XMD_strengthen_the_second_amendment: "Strengthen The Second Amendment"
+ XMD_efficient_fighters: "Efficient Fighters"
+ XMD_establish_the_department_of_defense: "Establish The Department Of Defense"
+ XMD_develop_doctrines: "Develop Doctrines"
+ XMD_the_office_of_strategic_services: "The Office Of Strategic Services"
+ XMD_pentagon_research_funds: "Pentagon Research Funds"
+
  XMD_cra_tt: "Civil Rights Act Success Rate"
  XMD_cc_tt: "Conservative Contentness"
  XMD_cra_success_rate_var_tt: "$XMD_cra_tt$: $RIGHT|+=%%0$"
@@ -106,6 +120,11 @@
  XMD_bidens_reign: "Biden's Reign"
  XMD_rise_of_the_klan: "Rise of the Klan"
  XMD_the_shadow_organisation: "The Shadow Organisation"
+ XMD_professional_army: "Professional Army"
+ XMD_department_of_defense: "Department of Defense"
+ XMD_special_forces: "Special Forces"
+ XMD_air_support: "Air Support"
+ XMD_efficient_fighters_idea: "Efficient Fighters"
 
  #Dynamic modifiers
  XMD_the_great_society_idea: "The Great Society"
@@ -166,6 +185,82 @@
  XMD_kill_the_american_tags: "Unify America"
  XMD_get_wargoal_on_FROM: "Prepare the Invasion of [FROM.GetName]"
  XMD_core_state: "Reconstruct [FROM.GetName]"
+
+ #events
+ XMD_political_events.1.t: "The President From The Future"
+ XMD_political_events.1.desc: ""
+ XMD_political_events.1.a: " "If I were smart I'd go home now." "
+ XMD_political_events.2.t: "State of the Union"
+ XMD_political_events.2.desc: ""
+ XMD_political_events.2.a: "There is much to be done..."
+ XMD_political_events.3.t: "Political Restructuring"
+ XMD_political_events.3.desc: ""
+ XMD_political_events.3.a: "Make minor reforms"
+ XMD_political_events.3.b: "Overhaul the political process"
+ XMD_political_events.3.c: "Establish dictatorial control"
+ XMD_political_events.4.t: "Promoting Democracy ACT - Voting"
+ XMD_political_events.4.desc: ""
+ XMD_political_events.4.a: "Passed."
+ XMD_political_events.4.b: "Failed."
+ XMD_political_events.5.t: "Preparing For the Coup"
+ XMD_political_events.5.desc: ""
+ XMD_political_events.5.a: "Gain support from leftist MAGA supporters."
+ XMD_political_events.5.b: "Dark Brandon does not need any help."
+ XMD_political_events.6.t: "Biden's Coup"
+ XMD_political_events.6.desc: ""
+ XMD_political_events.6.a: "This is Biden's america."
+ XMD_political_events.7.t: "Biden's Coup"
+ XMD_political_events.7.desc: ""
+ XMD_political_events.8.t: "Coalition Fractures"
+ XMD_political_events.8.desc: ""
+ XMD_political_events.8.a: "Good riddance."
+ XMD_political_events.9.t: "$XMD_the_civil_rights_act_of_year$ - Voting"
+ XMD_political_events.9.desc: ""
+ XMD_political_events.10.t: "The Black Scare"
+ XMD_political_events.10.desc: ""
+ XMD_political_events.10.a: "No Krauts Allowed."
+ XMD_political_events.11.t: "Campaigning Begins"
+ XMD_political_events.11.desc: ""
+ XMD_political_events.11.a: "We only have one shot."
+ XMD_political_events.12.t: "Voting Begins"
+ XMD_political_events.12.desc: ""
+ XMD_political_events.12.a: "The moment of truth..."
+ XMD_political_events.13.t: "The March on Washington"
+ XMD_political_events.13.desc: ""
+ XMD_political_events.13.a: "The fight for freedom starts."
+ XMD_political_events.14.t: "Meeting with Randolph"
+ XMD_political_events.14.desc: ""
+ XMD_political_events.14.a: "These are the men that will shape America's future."
+ XMD_political_events.15.t: "KKK Membership Rises"
+ XMD_political_events.15.desc: ""
+ XMD_political_events.15.a: "Turn a blind eye."
+ XMD_political_events.15.b: "Crack down on the klan."
+ XMD_political_events.16.t: "Radical Violence Increases"
+ XMD_political_events.16.desc: ""
+ XMD_political_events.16.a: "Time is running out."
+ XMD_political_events.17.t: "Fragile Unity"
+ XMD_political_events.17.desc: ""
+ XMD_political_events.17.a: "We must vanquish our invaders!"
+ XMD_political_events.18.t: "Reports of Clashes in the Street"
+ XMD_political_events.18.desc: ""
+ XMD_political_events.19.t: "A New Dawn For America"
+ XMD_political_events.19.desc: ""
+ XMD_political_events.19.a: "God Bless America"
+ XMD_political_events.20.t: "A New Dawn For America"
+ XMD_political_events.20.desc: ""
+ XMD_political_events.20.a: "Stripped Down Bill"
+ XMD_political_events.20.b: "Moderate Bill"
+ XMD_political_events.20.c: "Radical Bill"
+ XMD_political_events.21.t: "Overseeing the Pentagon"
+ XMD_political_events.21.desc: ""
+ XMD_political_events.21.a: "We will be ready for anything."
+ XMD_political_events.22.t: "Pentagon Finished Construction"
+ XMD_political_events.22.desc: ""
+ XMD_political_events.22.a: "And ye shall know the truth and the truth shall make you free."
+ XMD_political_events.23.t: "Inter-Branch Rivalry"
+ XMD_political_events.23.desc: ""
+ XMD_political_events.23.a: "Invest in Marine funding."
+ XMD_political_events.23.b: "Invest in Mountaineer funding."
 
  #Others
  STATE_935: "Northampton"
