Mega Nevada Update WTF IS SLEEP

--- a/localisation/english/DEN_USA/XNV_l_english.yml
+++ b/localisation/english/DEN_USA/XNV_l_english.yml
@@ -3,8 +3,16 @@
  XNV_DEF: "Nevada"
  XNV_ADJ: "Nevadan"
 
+ XNV_SWS: "United Nevadan States"
+ XNV_SWS: "United Nevadan States"
+ XNV_ADJ: "Nevadan"
+
  XNV_fascism: "Silver State"
  XNV_fascism_DEF: "Government of the Silver State"
+ XNV_fascism_ADJ: "Nevadan"
+ 
+ XNV_SWS_fascism: "United Silver States"
+ XNV_SWS_fascism: "United Silver States"
  XNV_fascism_ADJ: "Nevadan"
 
  NVD: "South Idaho"
@@ -17,10 +25,17 @@
  NVD_XNV_NevadaIdahoPuppet_State_DEF: "Nevada Idaho Territory"
  NVD_XNV_NevadaIdahoPuppet_State_ADJ: "Nevadan"
  
- NVD_XCA_NevadaIdahoPuppet_State: "Nevadan State of California"
- NVD_XCA_NevadaIdahoPuppet_State_DEF: "California"
- NVD_XCA_NevadaIdahoPuppet_State_ADJ: "Californian"
+ XCA_XNV_NevadaIdahoPuppet_State: "Nevadan California"
+ XCA_XNV_NevadaIdahoPuppet_State_DEF: ""Nevadan State of California"
+ XCA_XNV_NevadaIdahoPuppet_State_ADJ: "Californian"
 
+ XUT_XNV_NevadaIdahoPuppet_State: "Nevadan Utah"
+ XUT_XNV_NevadaIdahoPuppet_State_DEF: ""Nevadan State of Utah"
+ XUT_XNV_NevadaIdahoPuppet_State_ADJ: "Utah"
+
+ XAZ_XNV_NevadaIdahoPuppet_State: "Nevadan Arizona"
+ XAZ_XNV_NevadaIdahoPuppet_State_DEF: ""Nevadan State of Arizona"
+ XAZ_XNV_NevadaIdahoPuppet_State_ADJ: "Arizonian"
 
  STATE_938: "Lower Nevada"
  STATE_959: "Lower Idaho"
@@ -42,9 +57,17 @@
  XNV.1.d:0 "The results are in, the Democratic party has won the citizens' votes."
 
  XNVAFOC:0 "§YAll for Our Country§"
+ XNVAFOC_desc:0 "The Nevadan spirit shines bright amongst the shattered United States."
  XNVElection:0 "Begin Election"
  XNVDevelopment:0 "Rebuild Our Industry"
  XNVDevelopment_desc:0 "The great depression has heavily impacted our nation's farming and mineral extraction industries. If we are going to succeed, we will need to rebuild these industries."
+ XNVElection:0 "Nevada Election"
+ XNVElection_desc:0 "The Nevada election in Nevada between Richard Kirman Sr. and Morley Griswold could shape the nation's future. The Democratic candidate has the popular support, but the decision is still in the hands of the electoral college."
+ XNVElectionRep:0 "§RRepublican Party Victory§"
+ XNVElectionDem:0 "§BDemocratic Party Victory§"
+ XNVElectionRep_desc:0 "Morley Griswold of the Republican Party has won the election."
+ XNVElectionDem_desc:0 "Richard Kirman Sr. of the Democratic Party has won the election."
+ 
 
  XNV_AFOCIdea:0 "§YAll for Our Country§"
  XNV_AFOCIdea_desc:0 "The Nevadan spirit aims to overcome the nation's difficulties in these trying times."
@@ -52,10 +75,41 @@
  XNV_AFOCIdea2_desc:0 "The Nevadan spirit aims to overcome the nation's difficulties in these trying times."
  XNV_GreatDepression:0 "Great Depression"
  XNV_GreatDepression_desc:0 "§RThe failure of several major institutions has left the Nevada economy in shambles. The main industry of our economy, mineral extraction, has plummeted in value leading many to question how silver the Silver State really is."
-
+ XNV_GreatDepression2:0 "Great Depression"
+ XNV_GreatDepression2_desc:0 "§RThe failure of several major institutions has left the Nevada economy in shambles. The main industry of our economy, mineral extraction, has plummeted in value leading many to question how silver the Silver State really is."
+ XNV_GreatDepression3:0 "Great Depression"
+ XNV_GreatDepression3_desc:0 "§RThe failure of several major institutions has left the Nevada economy in shambles. The main industry of our economy, mineral extraction, has plummeted in value leading many to question how silver the Silver State really is."
+ XNV_GreatDepression4:0 "Great Depression"
+ XNV_GreatDepression4_desc:0 "§RThe failure of several major institutions has left the Nevada economy in shambles. The main industry of our economy, mineral extraction, has plummeted in value leading many to question how silver the Silver State really is."
+ XNVGunProduction:0 "Military Construction"
+ XNVGunProduction_desc:0 ""
+ XNVGunProduction2:0 "Military Construction"
+ XNVGunProduction2_desc:0 ""
+ XNVFarRightRallies:0 "Far Right Rallies"
+ XNVFarRightRallies_desc:0 "Our current government lacks the unity needed. We require a more... drastic ideology."
+ XNVStartProjectVegas:0 "Vegas Strip Construction"
+ XNVStartProjectVegas_desc:0 "The next step for the development of our fine state is to modernize the city of Las Vegas."
+ XNVPrepareFactories:0 "Prepare Factories for Construction"
+ XNVPrepareFactories_desc:0 "In order to complete large construction projects, we will need a large sum of spare civilian factories."
+ XNVPrepareFactories2:0 "Prepare Factories for Construction"
+ XNVPrepareFactories2_desc:0 "In order to complete large construction projects, we will need a large sum of spare civilian factories."
+ XNVWarPlans:0 "Regional Nevadan State Governments"
+ XNVWarPlans_desc:0 "While owning the entire United States would provide several benefits, regional governments would help lighten the load of governance."
+ XNVWarPlans2:0 "Integrate California"
+ XNVWarPlans2_desc:0 "We must use military force to integrate California into the United States of Nevada."
+ XNVWarPlans3:0 "Integrate Utah"
+ XNVWarPlans3_desc:0 "We must use military force to integrate Utah into the United States of Nevada."
+ XNVWarPlans4:0 "Integrate Arizona"
+ XNVWarPlans4_desc:0 "We must use military force to integrate Arizona into the United States of Nevada."
+ XNVWarPlans5:0 "Centralize Governance"
+ XNVWarPlans5_desc:0 "Now that we have grown in size, we should consider limiting the state's rights and maintaining closer control over our lands."
 
  XNV_DepressionDecisions:0 "Nevadan Great Depression"
+ XNV_DepressionDecisions_desc:0 "By supporting our industries, we can increase our development and beat the Great Depression! §LCurrent Development Level [?XNVDepressionFixingVal]§"
  XNV_SupportFarmers:0 "Provide Aid to Farmers"
+ XNV_SupportMines:0 "Government Mineral Extraction Programs"
+ XNV_Development_growth_1:0 "§GDevelopment Level Increased by 1§!"
+ XNV_Development_shrink_2:0 "§RDevelopment Level Decreased by 2§!"
 
  XID_Bookmark_desc:0 "The Nevadan-Idaho War of 1930 ended with a considerable Nevada victory. In the Boise Peace Treaty, Nevada took over Idaho as a provisional government. While the former Idaho government was left weak, they continued normal operations in parts of the Northern region of Idaho as an illegitimate state. Eventually, in 1932, they declared independence from the Nevadan Idaho Territory with little pushback."
  NVD_Bookmark_desc:0 "The Nevadan-Idaho War of 1930 ended with a considerable Nevada victory. In the Boise Peace Treaty, Nevada took over Idaho as a provisional government. The governing officials have started to become bitter with the Nevadan government after a lack of support to prevent the succesion of Free Idaho and are considering leaving Nevada's reign as well."
