Utah Final Tweaks
I would have done more if given the time lol.

--- a/localisation/english/DEN_USA/XUT_l_english.yml
+++ b/localisation/english/DEN_USA/XUT_l_english.yml
@@ -125,6 +125,109 @@
  XUT_core_nm_desc:0 ""
  XUT_first_communist_convention:0 "First Communist Convention"
  XUT_first_communist_convention_desc:0 "Now that most internal affairs are settled, it is time to determine the future of our nation."
+ XUT_regional_communism:0 "Communism at Home"
+ XUT_american_internationale:0 "American Internationale"
+ XUT_set_the_stage_cascadia:0 "Set the Stage in Cascadia"
+ XUT_liberate_nevada:0 "Liberate Nevada"
+ XUT_liberate_cali:0 "Liberate California"
+ XUT_launch_uprising_idaho:0 "Launch Uprisings in Idaho"
+ XUT_core_west:0 "Integrate the West"
+ XUT_pressure_washington:0 "Pressure Washington"
+ XUT_pressure_oregon:0 "Pressure Oregon"
+ XUT_diplomat_program:0 "Open Embassies"
+ XUT_pressure_wyoming:0 "Pressure Wyoming"
+ XUT_invite_wyoming:0 "Invite Wyoming"
+ XUT_invite_cascadia_red:0 "Invite Cascadia"
+ XUT_midwest:0 "Secure the East"
+ XUT_red_beacon:0 "The Red Beacon of the West"
+ XUT_form_cascadia:0 "Form Red Cascadia"
+ XUT_red_america:0 "A Red America"
+ XUT_in_our_backyard:0 "In Our Backyard"
+ XUT_montana_excursion:0 "Montana Excursion"
+ XUT_dakota_excursion:0 "Dakota Excursion"
+ XUT_core_north:0 "Integrate the North"
+ XUT_midwest_excursion:0 "Midwest Excursion"
+ XUT_core_midwest:0 "Integrate the Midwest"
+ XUT_core_texas:0 "Integrate Texas"
+ XUT_push_to_mississippi:0 "Push to the Mississippi"
+ XUT_core_mn:0 "Integrate Minnesota"
+ XUT_core_gateway:0 "Gateway to the East"
+ XUT_core_lower_ms:0 "Integrate the Lower Mississippi"
+ XUT_great_lakes:0 "Push to the Great Lakes"
+ XUT_south:0 "Push into the South"
+ XUT_core_great_lakes:0 "Integrate the Great Lakes"
+ XUT_core_south:0 "Integrate Dixie"
+ XUT_east_coast:0 "Sweep the Coast"
+ XUT_northeast:0 "Push into the Northeast"
+ XUT_red_victory:0 "Red Victory"
+ 
+ XUT_dreams_of_deseret:0 "Dreams of Deseret"
+ XUT_march_on_capital:0 "March on the Capital"
+ XUT_religious_decree:0 "Religious Decree"
+ XUT_restoring_the_pieces:0 "Restoring the Pieces"
+ XUT_des_arizona:0 "Coerce Arizona"
+ XUT_des_colorado:0 "Coerce Colorado"
+ XUT_des_new_mexico:0 "Coerce New Mexico"
+ XUT_convert_locals:0 "Convert the Locals"
+ XUT_split_nevada:0 "Split Nevada"
+ XUT_convert_sin_city:0 "Convert Sin City"
+ XUT_demolish_sin_city:0 "Demolish Sin City"
+ XUT_march_to_the_coast:0 "March to the Coast"
+ XUT_deseret_realized:0 "Deseret Realized"
+ 
+ XUT_a_slow_process:0 "A Slow Process"
+ XUT_employ_homeless:0 "Employ the Homeless"
+ XUT_reduce_inflation:0 "Reduce Inflation"
+ XUT_state_housing:0 "State Housing"
+ XUT_the_great_works:0 "The Great Works"
+ XUT_regulate_banks:0 "Regulate the Banks"
+ XUT_new_highways:0 "New Highways"
+ XUT_crack_oil:0 "Crack Oil"
+ XUT_dig_mines:0 "Dig Mines"
+ XUT_synthetic_rubber:0 "Synthetic Refineries"
+ XUT_civilian_focus:0 "Civilian Focus"
+ XUT_develop_phoenix:0 "Develop Phoenix"
+ XUT_military_focus:0 "Military Focus"
+ XUT_develop_denver:0 "Develop Denver"
+ XUT_los_alamos:0 "Los Alamos Project"
+ 
+ XUT_evil_in_chaos:0 "Evil in Chaos"
+ XUT_establish_the_holy_throne:0 "Establish the Holy Throne"
+ XUT_the_purge:0 "The Purge"
+ XUT_replace_mormonism:0 "Replace the Mormons"
+ XUT_prepare_holy_wars:0 "Prepare for the Holy Wars"
+ XUT_holy_guard:0 "The Holy Guard"
+ XUT_expand_recruitment:0 "Expand Recruitment"
+ XUT_lessons_from_the_future:0 "Lessons From the Future"
+ XUT_attract_grifters:0 "Attract Griftors"
+ XUT_alternative_medicine:0 "Alternative Medicine"
+ XUT_cryptocurrency:0 "Reintroduce Cryptocurrency"
+ XUT_cosmetics:0 "Cosmetic Recruitment"
+ XUT_new_movie_industry:0 "New Movie Industry"
+ XUT_top_gun:0 "Film Top Gun"
+ XUT_mission_impossible:0 "Film Mission Impossible"
+ XUT_minority_report:0 "Film Minority Report"
+ XUT_strike_colorado:0 "Strike Colorado"
+ XUT_strike_arizona:0 "Strike Arizona"
+ XUT_strike_new_mexico:0 "Strike New Mexico"
+ XUT_convert_colorado:0 "Convert Colorado"
+ XUT_convert_arizona:0 "Convert Arizona"
+ XUT_convert_new_mexico:0 "Convert New Mexico"
+ XUT_coerce_nevada:0 "Coerce Nevada"
+ XUT_strike_nevada:0 "Strike Nevada"
+ XUT_puppet_integration_NV:0 "Integrate Nevada"
+ XUT_coerce_california:0 "Coerce California"
+ XUT_strike_california:0 "Strike California"
+ XUT_nevada_integration:0 "Convert Nevada"
+ XUT_puppet_integration_CA:0 "Integrate California"
+ XUT_strike_east:0 "Strike the East"
+ XUT_reward_loyalty:0 "Reward Loyalty"
+ XUT_california_integration:0 "Convert California"
+ XUT_convert_texas:0 "Convert Texas"
+ XUT_convert_plains:0 "Convert Plains"
+ XUT_holy_fleet:0 "The Holy Fleet"
+ XUT_holy_land:0 "The Holy Land"
+ XUT_rebuild_holy_land:0 "Rebuild Clearwater"
  
  XUT_establish_military_school:0 "Establish Military Academies"
  XUT_establish_military_school_desc:0 "Our war strategies are out of date. It is time to reapproach the concept of war from a new perspective."
@@ -174,3 +277,13 @@
  XUT_fund_new_schools_desc:0 "The state of the Utah education system is dissapointing. Schools are small and falling apart. The government must completely rebuild these institutions from scratch."
  XUT_gather_scientists:0 "Attract Foreign Scientists"
  XUT_gather_scientists_desc:0 "To catch up on the world stage, it is best to incentivise scientists from abroad to work for Utah. The location may be remote, but money talks."
+ 
+ XUT.1.t:0 "The General Conference"
+ XUT.1.d:0 "Since the collapse of the federal government, Utah's government has been weak. Most people now look to the Mormon church for a source of authority. This can threat the status quo if left alone. The next General Conference for the LDS Church is about to be held and will determine the future of our great state."
+ XUT.1.a:0 "Declare a State of Emergency"
+ XUT.1.b:0 "Ignore the Mormons"
+ XUT.1.c:0 "Raid the Salt Lake Tabernacle"
+ 
+ XUT.2.t:0 "The Great Standoff"
+ XUT.2.d:0 "Right as the president of the Church is about to speak, state militia surround the complex. One of the officers bursts through the door and demand that he step down and be detained. Grant refused to budge and the military is ready to burst through all the entrances, but right before anyone can react, a bright light appears in the middle of the room. Some say it's a miracle, others say it's science unknown to man. Either way, a very disoriented man is revealed as the light fades. He is well groomed but in a casual outfit. The officer then declares, 'We are acting on behalf of the President of Utah! Who are you!?'"
+ XUT.2.a:0 "???"
